[metadata]
version = 0.0.1
description = Dev utils for SSOT and validation of cosmograph code
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = dev_utils_for_cosmograph
display_name = dev_utils_for_cosmograph

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

[options.extras_require]
testing = 
		

